# trustcatai-infra

trustcatai-monai/: .gitignore  Makefile  bootstrap.sh  pyproject.toml  requirements.txt
trustcatai-monai/.github/workflows/: build-docker.yml
trustcatai-monai/ansible/inventories/cluster/: inventory.ini
trustcatai-monai/ansible/playbooks/: train-run.yml
trustcatai-monai/ansible/roles/monai_gpu/tasks/: main.yml
trustcatai-monai/dockerfiles/: monai-infer.Dockerfile  monai-train.Dockerfile
trustcatai-monai/docs/: README.md
trustcatai-monai/kubernetes/charts/trustcatai-infer/: Chart.yaml  values.yaml
trustcatai-monai/kubernetes/charts/trustcatai-infer/templates/: deployment.yaml
trustcatai-monai/scripts/: infer_docker.sh  setup_env.sh  train_docker.sh  train_local.sh  verify_cuda.sh
trustcatai-monai/trustcatai/: __init__.py
trustcatai-monai/trustcatai/config/: infer_bratssyn.yaml  train_bratssyn_unet3d.yaml
trustcatai-monai/trustcatai/infer/: server.py
trustcatai-monai/trustcatai/models/: unet3d.py  zoo.py
trustcatai-monai/trustcatai/pipelines/: postprocess.py  transforms_3d.py
trustcatai-monai/trustcatai/trainer/: agent.py  evaluate.py  train.py
